Bug 13451 - Shopping bag: last line alignment is incorrect

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -647,12 +647,21 @@ section.maintenance p {
     body {
         min-width: 748px;
     }
+    #cart .checkout .order-items h3 {
+        width: 134px !important;
+    }
+    .confirmPayCard .order-items h3 {
+        width: 200px !important;
+    }
 }
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
     html.ipad {
         height: 672px !important;
         position: absolute;
         top: 0;
+    }
+    #cart .checkout .order-items h3 {
+        width: 224px !important;
     }
 }
 
